--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-config": "^1.5.1",
     "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-vision-camera": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
