--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
+    "luxon": "^3.4.4",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-config": "^1.5.1",
