--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.73.4",
     "react-native-config": "^1.5.1",
     "react-native-fast-image": "^8.6.3",
+    "react-native-file-access": "^3.0.5",
     "react-native-picker-select": "^9.0.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
